--- a/4_analyses.Rmd
+++ b/4_analyses.Rmd
@@ -7,30 +7,20 @@ source("0_helpers.R")
 
 ## Load data
 ```{r Load Data}
-alldata_birthorder = readRDS("data/alldata_birthorder.rds")
+birthorder = readRDS("data/birthorder.rds")
 ```
 
 ## Data Preperations
 ```{r data preperations}
 ### Variables
-alldata_birthorder = alldata_birthorder %>%
+birthorder = birthorder %>%
   mutate(
-    # if only child, we have to set birthorder and siblingcount as NA
-    birthorder_uterus_alive = ifelse(sibling_count_uterus_alive == 1, NA, birthorder_uterus_alive),
-    birthorder_uterus_preg = ifelse(sibling_count_uterus_preg == 1, NA, birthorder_uterus_preg),
-    birthorder_genes = ifelse(sibling_count_genes == 1, NA, birthorder_genes),
-    # if only child we have to set siblingcount as NA
-    sibling_count_uterus_alive = ifelse(sibling_count_uterus_alive == 1, NA, sibling_count_uterus_alive),
-    sibling_count_uterus_preg = ifelse(sibling_count_uterus_preg == 1, NA, sibling_count_uterus_preg),
-    sibling_count_genes = ifelse(sibling_count_genes == 1, NA, sibling_count_genes),
     # center birthyear
     birthyear = birth_year - mean(birth_year, na.rm = T),
     # Sex (1 = male, 2 = female)
     male = ifelse(sex.x == 1, 1L, 0L),
     male = ifelse(sex.x > 3, NA_integer_, male),
     male = factor(male),
-    # mother_pidlink has to be specified
-    mother_pidlink = mother_pidlink.x,
     # center variables that are used for analysy - but first save old values
     old_g_factor = g_factor,
     old_raven = raven,
@@ -68,10 +58,10 @@ alldata_birthorder = alldata_birthorder %>%
     riskA = (riskA - mean(riskA, na.rm=T)) / sd(riskA, na.rm=T),
     riskB = (riskB - mean(riskB, na.rm=T)) / sd(riskB, na.rm=T)
         )
-qplot(alldata_birthorder$g_factor)
+qplot(birthorder$male)
 
 ### Birthorder and Sibling Count
-alldata_birthorder = alldata_birthorder %>% 
+birthorder = birthorder %>% 
   mutate(
 # birthorder as factors with levels of 1, 2, 3, 4, 5, 5+
     birthorder_uterus_alive_factor = as.character(birthorder_uterus_alive),
@@ -140,7 +130,7 @@ alldata_birthorder = alldata_birthorder %>%
 
 ```{r}
 g_factor_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -151,7 +141,7 @@ compare_models_markdown(g_factor_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-g_factor_preg_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+g_factor_preg_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -164,7 +154,7 @@ compare_models_markdown(g_factor_preg_m1)
 
 ```{r}
 g_factor_parental_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -179,7 +169,7 @@ compare_models_markdown(g_factor_parental_m1)
 
 ```{r}
 raven_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -190,7 +180,7 @@ compare_models_markdown(raven_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-raven_preg_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+raven_preg_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -203,7 +193,7 @@ compare_models_markdown(raven_preg_m1)
 
 ```{r}
 raven_parental_m1 = lmer(raven ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -219,7 +209,7 @@ compare_models_markdown(raven_parental_m1)
 
 ```{r}
 math_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -230,7 +220,7 @@ compare_models_markdown(math_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-math_preg_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+math_preg_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -243,7 +233,7 @@ compare_models_markdown(math_preg_m1)
 
 ```{r}
 math_parental_m1 = lmer(math ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -258,7 +248,7 @@ compare_models_markdown(math_parental_m1)
 
 ```{r}
 count_backwards_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-               data = alldata_birthorder %>%
+               data = birthorder %>%
                  rename(sibling_count = sibling_count_uterus_alive_factor,
                         birth_order_nonlinear = birthorder_uterus_alive_factor,
                         birth_order = birthorder_uterus_alive,
@@ -269,7 +259,7 @@ compare_models_markdown(count_backwards_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-count_backwards_preg_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+count_backwards_preg_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
                       rename(sibling_count = sibling_count_uterus_preg_factor,
                              birth_order_nonlinear = birthorder_uterus_preg_factor,
                              birth_order = birthorder_uterus_preg,
@@ -282,7 +272,7 @@ compare_models_markdown(count_backwards_preg_m1)
 
 ```{r}
 count_backwards_parental_m1 = lmer(count_backwards ~ birthyear + male + sibling_count + (1 | marriage_id),
-                        data = alldata_birthorder %>% 
+                        data = birthorder %>% 
                           rename(sibling_count = sibling_count_genes_factor,
                                  birth_order_nonlinear = birthorder_genes_factor,
                                  birth_order = birthorder_genes,
@@ -297,7 +287,7 @@ compare_models_markdown(count_backwards_parental_m1)
 
 ```{r}
 words_immediate_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                          data = alldata_birthorder %>%
+                          data = birthorder %>%
                             rename(sibling_count = sibling_count_uterus_alive_factor,
                                    birth_order_nonlinear = birthorder_uterus_alive_factor,
                                    birth_order = birthorder_uterus_alive,
@@ -308,7 +298,7 @@ compare_models_markdown(words_immediate_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-words_immediate_preg_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+words_immediate_preg_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
                                  rename(sibling_count = sibling_count_uterus_preg_factor,
                                         birth_order_nonlinear = birthorder_uterus_preg_factor,
                                         birth_order = birthorder_uterus_preg,
@@ -321,7 +311,7 @@ compare_models_markdown(words_immediate_preg_m1)
 
 ```{r}
 words_immediate_parental_m1 = lmer(words_immediate ~ birthyear + male + sibling_count + (1 | marriage_id),
-                                   data = alldata_birthorder %>% 
+                                   data = birthorder %>% 
                                      rename(sibling_count = sibling_count_genes_factor,
                                             birth_order_nonlinear = birthorder_genes_factor,
                                             birth_order = birthorder_genes,
@@ -337,7 +327,7 @@ compare_models_markdown(words_immediate_parental_m1)
 
 ```{r}
 words_delayed_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                          data = alldata_birthorder %>%
+                          data = birthorder %>%
                             rename(sibling_count = sibling_count_uterus_alive_factor,
                                    birth_order_nonlinear = birthorder_uterus_alive_factor,
                                    birth_order = birthorder_uterus_alive,
@@ -348,7 +338,7 @@ compare_models_markdown(words_delayed_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-words_delayed_preg_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+words_delayed_preg_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
                                  rename(sibling_count = sibling_count_uterus_preg_factor,
                                         birth_order_nonlinear = birthorder_uterus_preg_factor,
                                         birth_order = birthorder_uterus_preg,
@@ -361,7 +351,7 @@ compare_models_markdown(words_delayed_preg_m1)
 
 ```{r}
 words_delayed_parental_m1 = lmer(words_delayed ~ birthyear + male + sibling_count + (1 | marriage_id),
-                                   data = alldata_birthorder %>% 
+                                   data = birthorder %>% 
                                      rename(sibling_count = sibling_count_genes_factor,
                                             birth_order_nonlinear = birthorder_genes_factor,
                                             birth_order = birthorder_genes,
@@ -376,7 +366,7 @@ compare_models_markdown(words_delayed_parental_m1)
 
 ```{r}
 adaptive_numbering_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                          data = alldata_birthorder %>%
+                          data = birthorder %>%
                             rename(sibling_count = sibling_count_uterus_alive_factor,
                                    birth_order_nonlinear = birthorder_uterus_alive_factor,
                                    birth_order = birthorder_uterus_alive,
@@ -387,7 +377,7 @@ compare_models_markdown(adaptive_numbering_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-adaptive_numbering_preg_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+adaptive_numbering_preg_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
                                  rename(sibling_count = sibling_count_uterus_preg_factor,
                                         birth_order_nonlinear = birthorder_uterus_preg_factor,
                                         birth_order = birthorder_uterus_preg,
@@ -400,7 +390,7 @@ compare_models_markdown(adaptive_numbering_preg_m1)
 
 ```{r}
 adaptive_numbering_parental_m1 = lmer(adaptive_numbering ~ birthyear + male + sibling_count + (1 | marriage_id),
-                                   data = alldata_birthorder %>% 
+                                   data = birthorder %>% 
                                      rename(sibling_count = sibling_count_genes_factor,
                                             birth_order_nonlinear = birthorder_genes_factor,
                                             birth_order = birthorder_genes,
@@ -416,7 +406,7 @@ compare_models_markdown(adaptive_numbering_parental_m1)
 
 ```{r}
 big5_ext_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -427,7 +417,7 @@ compare_models_markdown(big5_ext_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-big5_ext_preg_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+big5_ext_preg_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -440,7 +430,7 @@ compare_models_markdown(big5_ext_preg_m1)
 
 ```{r}
 big5_ext_parental_m1 = lmer(big5_ext ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -455,7 +445,7 @@ compare_models_markdown(big5_ext_parental_m1)
 
 ```{r}
 big5_neu_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -466,7 +456,7 @@ compare_models_markdown(big5_neu_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-big5_neu_preg_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+big5_neu_preg_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -479,7 +469,7 @@ compare_models_markdown(big5_neu_preg_m1)
 
 ```{r}
 big5_neu_parental_m1 = lmer(big5_neu ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -494,7 +484,7 @@ compare_models_markdown(big5_neu_parental_m1)
 
 ```{r}
 big5_con_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -505,7 +495,7 @@ compare_models_markdown(big5_con_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-big5_con_preg_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+big5_con_preg_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -518,7 +508,7 @@ compare_models_markdown(big5_con_preg_m1)
 
 ```{r}
 big5_con_parental_m1 = lmer(big5_con ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -533,7 +523,7 @@ compare_models_markdown(big5_con_parental_m1)
 
 ```{r}
 big5_agree_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -544,7 +534,7 @@ compare_models_markdown(big5_agree_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-big5_agree_preg_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+big5_agree_preg_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -557,7 +547,7 @@ compare_models_markdown(big5_agree_preg_m1)
 
 ```{r}
 big5_agree_parental_m1 = lmer(big5_agree ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -572,7 +562,7 @@ compare_models_markdown(big5_agree_parental_m1)
 
 ```{r}
 big5_open_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -583,7 +573,7 @@ compare_models_markdown(big5_open_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-big5_open_preg_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+big5_open_preg_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -596,7 +586,7 @@ compare_models_markdown(big5_open_preg_m1)
 
 ```{r}
 big5_open_parental_m1 = lmer(big5_open ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -613,7 +603,7 @@ compare_models_markdown(big5_open_parental_m1)
 
 ```{r}
 riskA_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -624,7 +614,7 @@ compare_models_markdown(riskA_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-riskA_preg_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+riskA_preg_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -637,7 +627,7 @@ compare_models_markdown(riskA_preg_m1)
 
 ```{r}
 riskA_parental_m1 = lmer(riskA ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
@@ -653,7 +643,7 @@ compare_models_markdown(riskA_parental_m1)
 
 ```{r}
 riskB_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidlink),
-                   data = alldata_birthorder %>%
+                   data = birthorder %>%
                      rename(sibling_count = sibling_count_uterus_alive_factor,
                             birth_order_nonlinear = birthorder_uterus_alive_factor,
                             birth_order = birthorder_uterus_alive,
@@ -664,7 +654,7 @@ compare_models_markdown(riskB_m1)
 #### Maternal Pregnancy Order {.tabset}
 
 ```{r}
-riskB_preg_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
+riskB_preg_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = birthorder %>% 
   rename(sibling_count = sibling_count_uterus_preg_factor,
          birth_order_nonlinear = birthorder_uterus_preg_factor,
          birth_order = birthorder_uterus_preg,
@@ -677,7 +667,7 @@ compare_models_markdown(riskB_preg_m1)
 
 ```{r}
 riskB_parental_m1 = lmer(riskB ~ birthyear + male + sibling_count + (1 | marriage_id),
-                            data = alldata_birthorder %>% 
+                            data = birthorder %>% 
   rename(sibling_count = sibling_count_genes_factor,
          birth_order_nonlinear = birthorder_genes_factor,
          birth_order = birthorder_genes,
