--- a/3_sample_analyses.Rmd
+++ b/3_sample_analyses.Rmd
@@ -13,12 +13,16 @@ birthorder = readRDS("data/birthorder.rds")
 ### Import all data
 alldata = readRDS("data/alldata.rds")
 
+### Import all pregnancy data
+pregnancy = readRDS("data/pregnancy.rds")
+
 ```
 
 ## Data Wrangling
 ```{r data wrangling}
 ## we have to exclude people in the control group who are part of the birthorder group
 individuals = birthorder$pidlink
+mother_birthdate_unique_ind = birthorder$mother_birthdate_unique
 
 alldata = alldata %>%
   filter(!pidlink %in% individuals) %>%
@@ -33,14 +37,207 @@ alldata = alldata %>%
          age = ifelse(age>112, NA, age)) %>%
   filter(check == 1)
 
+pregnancy = pregnancy %>%
+  filter(!mother_birthdate_unique %in% mother_birthdate_unique_ind) %>%
+  mutate(group = "control",
+         male = factor(gender == 1),
+         male = ifelse(gender > 3, NA, male)) %>%
+  group_by(mother_pidlink) %>%
+  mutate(number_siblings = n()) %>%
+  ungroup
+
 birthorder = birthorder %>%
   mutate(male = factor(gender == 1), 
-         male = (ifelse(gender > 3, NA, male)))
+         male = (ifelse(gender > 3, NA, male))) %>%
+  group_by(mother_pidlink) %>%
+  mutate(number_siblings = n()) %>%
+  ungroup
 
+df_pregnancy = bind_rows(pregnancy, birthorder)
 df = bind_rows(alldata, birthorder)
+
 ```
 
-## Data Comparison {.tabset}
+## Data Comparison Birth Order and Sibship Size {.tabset}
+
+### Maternal birthorder
+```{r maternal birthorder}
+descriptives = df_pregnancy %>%
+  filter(!is.na(birthorder_uterus_alive)) %>%
+  group_by(group) %>%
+    summarise(individuals = n(),
+              mothers = length(unique(mother_pidlink)),
+              sibship_size_mean = mean(sibling_count_uterus_alive, na.rm = T),
+              sibship_size_confidence_low = mean(sibling_count_uterus_alive, na.rm = T) - 
+                (qt(.975, n()-1)*sd(sibling_count_uterus_alive, na.rm = T)/sqrt(n())),
+              sibship_size_confidence_high = mean(sibling_count_uterus_alive, na.rm = T) + 
+                (qt(.975, n()-1)*sd(sibling_count_uterus_alive, na.rm = T)/sqrt(n())),
+              sibship_size_min = min(sibling_count_uterus_alive, na.rm = TRUE),
+              sibship_size_max = max(sibling_count_uterus_alive, na.rm = TRUE),
+              birthorder_mean = mean(birthorder_uterus_alive, na.rm = T),
+              birthorder_size_confidence_low = mean(birthorder_uterus_alive, na.rm = T) - 
+                (qt(.975, n()-1)*sd(birthorder_uterus_alive, na.rm = T)/sqrt(n())),
+              birthorder_size_confidence_high = mean(birthorder_uterus_alive, na.rm = T) + 
+                (qt(.975, n()-1)*sd(birthorder_uterus_alive, na.rm = T)/sqrt(n())),
+              birthorder_size_min = min(birthorder_uterus_alive, na.rm = TRUE),
+              birthorder_size_max = max(birthorder_uterus_alive, na.rm = TRUE),
+              number_siblings_mean = mean(number_siblings),
+              number_siblings_confidence_low = mean(number_siblings, na.rm = T) -
+                (qt(.975, n()-1)*sd(number_siblings, na.rm = T)/sqrt(n())),
+              number_siblings_confidence_high = mean(number_siblings, na.rm = T) +
+                (qt(.975, n()-1)*sd(number_siblings, na.rm = T)/sqrt(n())))
+
+descriptives
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_uterus_alive)) %>% 
+  t.test(sibling_count_uterus_alive ~ group, data = ., var.equal = T)
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_uterus_alive)) %>% 
+  t.test(birthorder_uterus_alive ~ group, data = ., var.equal = T)
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_uterus_alive)) %>% 
+  t.test(number_siblings ~ group, data = ., var.equal = T)
+
+```
+
+
+#### How many siblings with data do we retain in each family?
+```{r}
+
+birthorder %>% filter(!is.na(birthorder_uterus_alive)) %>% group_by(mother_pidlink) %>% summarise(with_data = n(), all = mean(sibling_count_uterus_alive)) -> counts
+pregnancy %>% filter(!is.na(birthorder_uterus_alive)) %>% group_by(mother_pidlink) %>% summarise(with_data = n(), all = mean(sibling_count_uterus_alive)) -> counts1
+```
+
+In our test sample families with an average size of `r mean(counts$all,na.rm= T)` siblings, we retain `r mean(counts$with_data)`.
+
+In the original sample families with an average size of `r mean(counts1$all,na.rm= T)` siblings, we retain `r mean(counts1$with_data)`.
+
+```{r}
+ggplot(counts, aes(all, with_data)) + geom_jitter(alpha = 0.1) + geom_smooth() + scale_x_continuous(breaks=1:15) + scale_y_continuous(breaks=1:15)
+```
+
+### Maternal Pregnancy Order
+```{r maternal pregnancy order}
+descriptives = df_pregnancy %>%
+  filter(!is.na(birthorder_uterus_preg)) %>%
+  group_by(group) %>%
+  summarise(individuals = n(),
+            mothers = length(unique(mother_pidlink)),
+            sibship_size_mean = mean(sibling_count_uterus_preg, na.rm = T),
+            sibship_size_confidence_low = mean(sibling_count_uterus_preg, na.rm = T) - 
+              (qt(.975, n()-1)*sd(sibling_count_uterus_preg, na.rm = T)/sqrt(n())),
+            sibship_size_confidence_high = mean(sibling_count_uterus_preg, na.rm = T) + 
+              (qt(.975, n()-1)*sd(sibling_count_uterus_preg, na.rm = T)/sqrt(n())),
+            sibship_size_min = min(sibling_count_uterus_preg, na.rm = TRUE),
+            sibship_size_max = max(sibling_count_uterus_preg, na.rm = TRUE),
+            birthorder_mean = mean(birthorder_uterus_preg, na.rm = T),
+            birthorder_size_confidence_low = mean(birthorder_uterus_preg, na.rm = T) - 
+              (qt(.975, n()-1)*sd(birthorder_uterus_preg, na.rm = T)/sqrt(n())),
+            birthorder_size_confidence_high = mean(birthorder_uterus_preg, na.rm = T) + 
+              (qt(.975, n()-1)*sd(birthorder_uterus_preg, na.rm = T)/sqrt(n())),
+            birthorder_size_min = min(birthorder_uterus_preg, na.rm = TRUE),
+            birthorder_size_max = max(birthorder_uterus_preg, na.rm = TRUE),
+            number_siblings_mean = mean(number_siblings),
+            number_siblings_confidence_low = mean(number_siblings, na.rm = T) -
+              (qt(.975, n()-1)*sd(number_siblings, na.rm = T)/sqrt(n())),
+            number_siblings_confidence_high = mean(number_siblings, na.rm = T) +
+              (qt(.975, n()-1)*sd(number_siblings, na.rm = T)/sqrt(n())))
+
+descriptives
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_uterus_preg)) %>% 
+  t.test(sibling_count_uterus_preg ~ group, data = ., var.equal = T)
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_uterus_preg)) %>% 
+  t.test(birthorder_uterus_preg ~ group, data = ., var.equal = T)
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_uterus_preg)) %>% 
+  t.test(number_siblings ~ group, data = ., var.equal = T)
+
+```
+
+
+#### How many siblings with data do we retain in each family?
+```{r}
+
+birthorder %>% filter(!is.na(birthorder_uterus_preg)) %>% group_by(mother_pidlink) %>% summarise(with_data = n(), all = mean(sibling_count_uterus_preg)) -> counts
+pregnancy %>% filter(!is.na(birthorder_uterus_preg)) %>% group_by(mother_pidlink) %>% summarise(with_data = n(), all = mean(sibling_count_uterus_preg)) -> counts1
+```
+
+In our test sample families with an average size of `r mean(counts$all,na.rm= T)` siblings, we retain `r mean(counts$with_data)`.
+
+In the original sample families with an average size of `r mean(counts1$all,na.rm= T)` siblings, we retain `r mean(counts1$with_data)`.
+
+```{r}
+ggplot(counts, aes(all, with_data)) + geom_jitter(alpha = 0.1) + geom_smooth() + scale_x_continuous(breaks=1:15) + scale_y_continuous(breaks=1:15)
+```
+
+### Parental Full Sibling Order
+```{r parental full sibling order}
+descriptives = df_pregnancy %>%
+  filter(!is.na(birthorder_genes)) %>%
+  group_by(group) %>%
+  summarise(individuals = n(),
+            mothers = length(unique(mother_pidlink)),
+            sibship_size_mean = mean(sibling_count_genes, na.rm = T),
+            sibship_size_confidence_low = mean(sibling_count_genes, na.rm = T) - 
+              (qt(.975, n()-1)*sd(sibling_count_genes, na.rm = T)/sqrt(n())),
+            sibship_size_confidence_high = mean(sibling_count_genes, na.rm = T) + 
+              (qt(.975, n()-1)*sd(sibling_count_genes, na.rm = T)/sqrt(n())),
+            sibship_size_min = min(sibling_count_genes, na.rm = TRUE),
+            sibship_size_max = max(sibling_count_genes, na.rm = TRUE),
+            birthorder_mean = mean(birthorder_genes, na.rm = T),
+            birthorder_size_confidence_low = mean(birthorder_genes, na.rm = T) - 
+              (qt(.975, n()-1)*sd(birthorder_genes, na.rm = T)/sqrt(n())),
+            birthorder_size_confidence_high = mean(birthorder_genes, na.rm = T) + 
+              (qt(.975, n()-1)*sd(birthorder_genes, na.rm = T)/sqrt(n())),
+            birthorder_size_min = min(birthorder_genes, na.rm = TRUE),
+            birthorder_size_max = max(birthorder_genes, na.rm = TRUE),
+            number_siblings_mean = mean(number_siblings),
+            number_siblings_confidence_low = mean(number_siblings, na.rm = T) -
+              (qt(.975, n()-1)*sd(number_siblings, na.rm = T)/sqrt(n())),
+            number_siblings_confidence_high = mean(number_siblings, na.rm = T) +
+              (qt(.975, n()-1)*sd(number_siblings, na.rm = T)/sqrt(n())))
+
+descriptives
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_genes)) %>% 
+  t.test(sibling_count_genes ~ group, data = ., var.equal = T)
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_genes)) %>% 
+  t.test(birthorder_genes ~ group, data = ., var.equal = T)
+
+df_pregnancy %>% 
+  filter(!is.na(birthorder_genes)) %>% 
+  t.test(number_siblings ~ group, data = ., var.equal = T)
+
+```
+
+
+#### How many siblings with data do we retain in each family?
+```{r}
+
+birthorder %>% filter(!is.na(birthorder_genes)) %>% group_by(mother_pidlink) %>% summarise(with_data = n(), all = mean(sibling_count_genes)) -> counts
+pregnancy %>% filter(!is.na(birthorder_genes)) %>% group_by(mother_pidlink) %>% summarise(with_data = n(), all = mean(sibling_count_genes)) -> counts1
+```
+
+In our test sample families with an average size of `r mean(counts$all,na.rm= T)` siblings, we retain `r mean(counts$with_data)`.
+
+In the original sample families with an average size of `r mean(counts1$all,na.rm= T)` siblings, we retain `r mean(counts1$with_data)`.
+
+```{r}
+ggplot(counts, aes(all, with_data)) + geom_jitter(alpha = 0.1) + geom_smooth() + scale_x_continuous(breaks=1:15) + scale_y_continuous(breaks=1:15)
+```
+
+## Data Comparison Outcome Measurements and covariats {.tabset}
 ### Control group
 ```{r data comparison}
 ## Descriptives
@@ -68,16 +265,6 @@ ratings = df %>%
                 (qt(.975, n()-1)*sd(g_factor, na.rm = T)/sqrt(n())),
             g_factor_confidence_high = mean(g_factor, na.rm = T) +
                 (qt(.975, n()-1)*sd(g_factor, na.rm = T)/sqrt(n())),
-            riskA_mean = mean(riskA, na.rm=T),
-            riskA_confidence_low= mean(riskA, na.rm = T) - 
-                (qt(.975, n()-1)*sd(riskA, na.rm = T)/sqrt(n())),
-            riskA_confidence_high = mean(riskA, na.rm = T) +
-                (qt(.975, n()-1)*sd(riskA, na.rm = T)/sqrt(n())),
-            riskB_mean = mean(riskB, na.rm=T),
-            riskB_confidence_low= mean(riskB, na.rm = T) - 
-                (qt(.975, n()-1)*sd(riskB, na.rm = T)/sqrt(n())),
-            riskB_confidence_high = mean(riskB, na.rm = T) +
-                (qt(.975, n()-1)*sd(riskB, na.rm = T)/sqrt(n())),
             big5_ext_mean = mean(big5_ext, na.rm=T),
             big5_ext_confidence_low= mean(big5_ext, na.rm = T) - 
                 (qt(.975, n()-1)*sd(big5_ext, na.rm = T)/sqrt(n())),
@@ -102,18 +289,27 @@ ratings = df %>%
             big5_open_confidence_low= mean(big5_open, na.rm = T) - 
                 (qt(.975, n()-1)*sd(big5_open, na.rm = T)/sqrt(n())),
             big5_open_confidence_high = mean(big5_open, na.rm = T) +
-                (qt(.975, n()-1)*sd(big5_open, na.rm = T)/sqrt(n())))
+                (qt(.975, n()-1)*sd(big5_open, na.rm = T)/sqrt(n())),
+            riskA_mean = mean(riskA, na.rm=T),
+            riskA_confidence_low= mean(riskA, na.rm = T) - 
+                (qt(.975, n()-1)*sd(riskA, na.rm = T)/sqrt(n())),
+            riskA_confidence_high = mean(riskA, na.rm = T) +
+                (qt(.975, n()-1)*sd(riskA, na.rm = T)/sqrt(n())),
+            riskB_mean = mean(riskB, na.rm=T),
+            riskB_confidence_low= mean(riskB, na.rm = T) - 
+                (qt(.975, n()-1)*sd(riskB, na.rm = T)/sqrt(n())),
+            riskB_confidence_high = mean(riskB, na.rm = T) +
+                (qt(.975, n()-1)*sd(riskB, na.rm = T)/sqrt(n())))
 ratings
 
 t.test(df$g_factor ~ df$group, var.equal = T)
-t.test(df$riskA ~ df$group, var.equal = T)
-t.test(df$riskB ~ df$group, var.equal = T)
 t.test(df$big5_ext ~ df$group, var.equal = T)
 t.test(df$big5_neu ~ df$group, var.equal = T)
 t.test(df$big5_con ~ df$group, var.equal = T)
 t.test(df$big5_agree ~ df$group, var.equal = T)
 t.test(df$big5_open ~ df$group, var.equal = T)
-
+t.test(df$riskA ~ df$group, var.equal = T)
+t.test(df$riskB ~ df$group, var.equal = T)
 
 ```
 
@@ -253,4 +449,3 @@ mean_sd
 ```{r}
 round(cor(birthorder %>% ungroup() %>% select(age, male, g_factor, big5_ext, big5_neu, big5_con, big5_agree, big5_open, riskA, riskB), use = "pairwise.complete.obs"), 2) 
 ```
-
