--- a/_test_outcome.Rmd
+++ b/_test_outcome.Rmd
@@ -53,12 +53,8 @@ plot_birthorder(m4_interaction)
 ##### Model Comparison
 ```{r}
 ###### Model 1 - Model 2
-anova(m1_covariates_only, m2_birthorder_linear)
+anova(m1_covariates_only, m2_birthorder_linear, m3_birthorder_nonlinear, m4_interaction)
 
-###### Model 1 - Model 3
-anova(m1_covariates_only, m3_birthorder_nonlinear)
 
-###### Model 1 - Model 4
-anova(m1_covariates_only, m4_interaction)
 ```
 
